--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "",
+  "author": "chaitanya@curlmate.dev",
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.21.0",
     "@vitejs/plugin-react": "^5.1.2",
@@ -8,7 +8,7 @@
     "mcp-remote": "^0.1.37"
   },
   "keywords": [],
-  "name": "@cloudflare/agents-mcp-example",
+  "name": "@curlmate/notion-remote-mcp",
   "private": true,
   "scripts": {
     "start": "concurrently \"npx @modelcontextprotocol/inspector\" \"vite dev\" --kill-others",
